# AIFFEL_quest_cr

./: SubQuestC04_ipynb의_사본.ipynb  Untitled2.ipynb  c3chatbot.ipynb
DLthon/: dathon3_jellyjellyfish.ipynb
Exploration/Quest01/: README.md
Exploration/Quest02/: README.md  news_summarize250411.ipynb
Exploration/Quest03/: README.md  personnpuppy_blurredone (1).ipynb  personnpuppy_blurredone.ipynb  personnpuppy_blurredone_final.ipynb
Exploration/Quest04/: README.md  exploration04_cifar10_image.ipynb  exploration04_cifar10_improved.ipynb  exploration04_gan_deeplearning.ipynb
Exploration/Quest05/: Exploration_Node_5_C3_chatbot (1).ipynb  Exploration_Node_5_C3_chatbot (2).ipynb  Exploration_Node_5_C3_chatbot (3).ipynb  Exploration_Node_5_C3_chatbot (4).ipynb  Exploration_Node_5_C3_chatbot.ipynb  README.md
Exploration/Quest06/: 250422_Ex06_youkyung_ipynb의_사본.ipynb  README.md
Exploration/Quest07/: 250424_ex07_keras_tuner.ipynb  250425_cifar10_image_predict.ipynb  Ex7.ipynb  README.md
Flutter/Quest01/: README.md  main.dart
Flutter/Quest02/: README.md  flutter_quest2.dart  flutter_quest2_further.dart
Flutter/Quest04/: 0307_instagram_3pages_swipeadd.dart  README2.md
Flutter/Quest05/: README.md
Flutter/Quest05/fastapi/: main.py  pyproject.toml  run_server.sh  server_fastapi_vgg16.py  vgg16_download.py  vgg16_prediction_model.py
MainQuest/Quest01/: Bank_Monster.ipynb  Segmentation_09.ipynb
MainQuest/Quest03/: Pn_Xray (1).py  (+2 more)
Python/: Deep_Learning_with_Python.ipynb  IRIS_project.ipynb  Movie_review4th.ipynb  SQURE_and_Kiosk.ipynb  The_real_practice.ipynb
(+25 files in other folders)
